--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                     <h1 class="intro__title">Beautiful React Templates <span class="text-purple">for you.</span></h1>
                     <p class="intro__subtitle">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
                     <div class="input__wrapper">
-                        <input class="input__field" placeholder="Your E-mail Address" type="Email">
-                        <button class="input__btn">Get Started</button>
+                        <input class="input__field" placeholder="Your E-mail Address" type="Email"> <button class="input__btn">Get Started</button>
                     </div>
                     <p class="intro__subtitle--customer">OUR TRUSTED CUSTOMERS</p>
                     <img class="customer__logo" src="./assets/Customer__logo.png" alt="">
