--- a/index.html
+++ b/index.html
@@ -56,6 +56,76 @@
     </div>
 </section>
 
+<section id="features">
+    <div class="row">
+        <div class="container">
+            <div class="features__description">
+                <span class="text-purple features__heading">FEATURES</span>
+                <h2 class="features__title">We have Amazing&nbsp;<span class="text-purple"> Service.</span></H2>
+                <p class="features__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+                    <div class="features__cards">
+                        <div class="features__card">
+                            <figure class="features__card-img--wrapper">
+                                <img class="features__card-img" src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+                            </figure>
+                            <div class="features__card-text">
+                                <div class="features__card-text--title">Secure</div>
+                                <div class="features__card-text--para">We strictly only deal with vendors that provide top notch security.</div>
+                            </div>
+                        </div>
+                        <div class="features__card">
+                            <figure class="features__card-img--wrapper">
+                                <img class="features__card-img" src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+                            </figure>
+                            <div class="features__card-text">
+                                <div class="features__card-text--title">24/7 Support</div>
+                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                            </div>
+                        </div>
+                        <div class="features__card">
+                            <figure class="features__card-img--wrapper">
+                                <img class="features__card-img" src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
+                            </figure>
+                            <div class="features__card-text">
+                                <div class="features__card-text--title">Customizable</div>
+                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                            </div>
+                        </div>
+                        <div class="features__card">
+                            <figure class="features__card-img--wrapper">
+                                <img class="features__card-img" src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
+                            </figure>
+                            <div class="features__card-text">
+                                <div class="features__card-text--title">Reliable</div>
+                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                            </div>
+                        </div>
+                        <div class="features__card">
+                            <figure class="features__card-img--wrapper">
+                                <img class="features__card-img" src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+                            </figure>
+                            <div class="features__card-text">
+                                <div class="features__card-text--title">Fast</div>
+                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                            </div>
+                        </div>
+                        <div class="features__card">
+                            <figure class="features__card-img--wrapper">
+                                <img class="features__card-img" src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="">
+                            </figure>
+                            <div class="features__card-text">
+                                <div class="features__card-text--title">Easy</div>
+                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                            </div>
+                        </div>
+
+                    </div>
+            
+        </div>
+    </div>
+</section>
+
 
 
 
