quality tab html

--- a/index.html
+++ b/index.html
@@ -10,29 +10,25 @@
 </head>
 <body>
     
-<nav class="row">
-    <div class="nav__container">
-        <div class="nav__logo--wrapper">
-            <a href="https://treact.owaiskhan.me/" class="nav__logo--link" target="_blank">
-                <img src="./assets/Treact_logo.svg" alt="" class="nav__logo--img">
-                <strong class="nav__logo--text">Treact</strong> 
-            </a>
+<nav>
+    <div class="row">
+        <div class="nav__container">
+            <div class="nav__logo--wrapper">
+                <a href="https://treact.owaiskhan.me/" class="nav__logo--link" target="_blank">
+                    <img src="./assets/Treact_logo.svg" alt="" class="nav__logo--img">
+                    <strong class="nav__logo--text">Treact</strong> 
+                </a>
+            </div>
+            <ul class="nav__links">
+                <a href="" class="nav__link">About</a>
+                <a href="" class="nav__link">Blog</a>
+                <a href="" class="nav__link">Pricing</a>
+                <a href="" class="nav__link">Contact Us</a>
+                <a href="" class="nav__link">Login</a>
+                <a href="" class="nav__link--primary">Sign up</a>
+            </ul>
         </div>
-    <ul class="nav__links">
-        <a href="" class="nav__link">About</a>
-        <a href="" class="nav__link">Blog</a>
-        <a href="" class="nav__link">Pricing</a>
-        <a href="" class="nav__link">Contact Us</a>
-        <a href="" class="nav__link">Login</a>
-        <a href="" class="nav__link--primary">Sign up</a>
-    </ul>
-    
-    </div>
-
-
-
-
-
+    </div>  
 </nav>
 
 <section id="landing">
@@ -43,7 +39,8 @@
                     <h1 class="intro__title">Beautiful React Templates <span class="text-purple">for you.</span></h1>
                     <p class="intro__subtitle">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
                     <div class="input__wrapper">
-                        <input class="input__field" placeholder="Your E-mail Address" type="Email"> <button class="input__btn">Get Started</button>
+                        <input class="input__field" placeholder="Your E-mail Address" type="Email">
+                        <button class="input__btn">Get Started</button>
                     </div>
                     <p class="intro__subtitle--customer">OUR TRUSTED CUSTOMERS</p>
                     <img class="customer__logo" src="./assets/Customer__logo.png" alt="">
@@ -126,6 +123,23 @@
     </div>
 </section>
 
+<section id="quality">
+    <div class="row">
+        <div class="container">
+            <div class="quality">
+                <div class="quality__text">
+                    <div class="quality__text--header">QUALITY WORK</div>
+                    <div class="quality__text-title">Designed & Developed by Professionals.</div>
+                    <div class="quality__text--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                    <button class="quality__btn">Learn More</button>
+                </div>
+                <figure class="quality__img--wrapper">
+                    <img class="quality__img" src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
