Steps tab/reusable code rework

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="" class="nav__link">Pricing</a>
                 <a href="" class="nav__link">Contact Us</a>
                 <a href="" class="nav__link">Login</a>
-                <a href="" class="nav__link--primary">Sign up</a>
+                <a href="" class="nav__link--primary"><button>Sign up</button></a>
             </ul>
         </div>
     </div>  
@@ -42,7 +42,7 @@
                         <input class="input__field" placeholder="Your E-mail Address" type="Email">
                         <button class="input__btn">Get Started</button>
                     </div>
-                    <p class="intro__subtitle--customer">OUR TRUSTED CUSTOMERS</p>
+                    <p class="intro__subtitle--customer text-light-gray">OUR TRUSTED CUSTOMERS</p>
                     <img class="customer__logo" src="./assets/Customer__logo.png" alt="">
                 </div>
                 <div class="intro__img--wrapper">
@@ -57,9 +57,9 @@
     <div class="row">
         <div class="container">
             <div class="features__description">
-                <span class="text-purple features__heading">FEATURES</span>
+                <span class="text-purple text-heading">FEATURES</span>
                 <h2 class="features__title">We have Amazing&nbsp;<span class="text-purple"> Service.</span></H2>
-                <p class="features__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="features__subtitle text-light-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
                     <div class="features__cards">
                         <div class="features__card">
@@ -68,7 +68,7 @@
                             </figure>
                             <div class="features__card-text">
                                 <div class="features__card-text--title">Secure</div>
-                                <div class="features__card-text--para">We strictly only deal with vendors that provide top notch security.</div>
+                                <p class="features__card-text--para text-light-gray">We strictly only deal with vendors that provide top notch security.</p>
                             </div>
                         </div>
                         <div class="features__card">
@@ -77,7 +77,7 @@
                             </figure>
                             <div class="features__card-text">
                                 <div class="features__card-text--title">24/7 Support</div>
-                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                                <p class="features__card-text--para text-light-gray">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                             </div>
                         </div>
                         <div class="features__card">
@@ -86,7 +86,7 @@
                             </figure>
                             <div class="features__card-text">
                                 <div class="features__card-text--title">Customizable</div>
-                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                                <p class="features__card-text--para text-light-gray">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                             </div>
                         </div>
                         <div class="features__card">
@@ -95,7 +95,7 @@
                             </figure>
                             <div class="features__card-text">
                                 <div class="features__card-text--title">Reliable</div>
-                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                                <p class="features__card-text--para text-light-gray">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                             </div>
                         </div>
                         <div class="features__card">
@@ -104,7 +104,7 @@
                             </figure>
                             <div class="features__card-text">
                                 <div class="features__card-text--title">Fast</div>
-                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                                <p class="features__card-text--para text-light-gray">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                             </div>
                         </div>
                         <div class="features__card">
@@ -113,7 +113,7 @@
                             </figure>
                             <div class="features__card-text">
                                 <div class="features__card-text--title">Easy</div>
-                                <div class="features__card-text--para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</div>
+                                <p class="features__card-text--para text-light-gray">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                             </div>
                         </div>
 
@@ -127,10 +127,10 @@
     <div class="row">
         <div class="container">
             <div class="quality">
-                <div class="quality__text">
-                    <div class="quality__text--header">QUALITY WORK</div>
-                    <div class="quality__text-title">Designed & Developed by Professionals.</div>
-                    <div class="quality__text--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                <div class="quality__text text__align--left">
+                    <div class="text-heading text-purple quality__heading">QUALITY WORK</div>
+                    <h2 class="quality__text-title">Designed & Developed by <span class="text-purple">Professionals.</span></h2>
+                    <p class="quality__text--para text-light-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <button class="quality__btn">Learn More</button>
                 </div>
                 <figure class="quality__img--wrapper">
@@ -141,6 +141,54 @@
     </div>
 </section>
 
+<section id="steps">
+    <div class="row">
+        <div class="container">
+            <div class="steps">
+                <figure class="steps__img--wrapper">
+                    <img src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+                </figure>    
+                <div class="steps__text">
+                    <div class="text-heading text-purple">STEPS</div>
+                    <h2 class="steps__text--title">Easy to <span class="text-purple">Get Started.</span></h2>
+                    
+                    <ul class="steps__para--wrapper">
+
+                        <li class="steps__text--para">
+                            <div class="steps__para--number">01</div>
+                        <div class="steps__para-text">
+                            <div class="steps__para-text--title">Register</div>
+                            <div class="steps__para-text--subtitle text-light-gray ">Create an account with us using Google or Facebook.
+                            </div>
+                        </div>
+                        </li>
+                        <li class="steps__text--para">
+                            <div class="steps__para--number">02</div>
+                        <div class="steps__para-text">
+                            <div class="steps__para-text--title">Download</div>
+                            <div class="steps__para-text--subtitle text-light-gray ">Browse and Download the template that you like from the marketplace.
+                            </div>
+                        </div>
+                        </li>
+                        <li class="steps__text--para">
+                            <div class="steps__para--number">03</div>
+                        <div class="steps__para-text">
+                            <div class="steps__para-text--title">Run</div>
+                            <div class="steps__para-text--subtitle text-light-gray ">Follow the instructions to setup and customize the template to your needs.
+
+
+                            </div>
+                        </div>
+                        </li>
+                    
+                </ul>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
 
 
 
