--- a/index.html
+++ b/index.html
@@ -190,7 +190,46 @@
     </div>
 </section>
 
+<section id="values">
+    <div class="row">
+        <div class="container">
+            <div class="values">
 
+                <div class="values__text">
+                    <div class="text-heading text-purple">VALUES</div>
+                    <h2 class="values__title">We Always Abide by Our <span class="text-purple">Principles.</span></h2>
+                    <p class="values__subtitle text-light-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <div class="values__cards">
+                        <div class="values__card">
+                            <div class="values__card--icon-title">
+                                <figure class="values__card--icon">
+                                    <i class="fas fa fa-solid fa-dollar-sign"></i>
+                                </figure>
+                                <div class="values__card--title">Affordable</div>
+                            </div>
+                            <div class="values__card--para text-light-gray">We promise to offer you the best rate we can - at par with the industry standard.
+                            </div>
+                        </div>
+                        <div class="values__card">
+                            <div class="values__card--icon-title">
+                                <figure class="values__card--icon">
+                                    <i class="fas fa-suitcase"></i>
+                                </figure>
+                                <div class="values__card--title">Professionalism</div>
+                            </div>
+                            <div class="values__card--para text-light-gray">We assure you that our templates are designed and created by professional designers.
+                            </div>
+                        </div>
+                    </div>
+                    <button>Learn More</button>
+                </div>
+                <figure class="values__img--wrapper">
+                    <img class="values__img" src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                </figure>   
+            </div>
+        </div>
+    </div>  
+</section>
 
 
 
