--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="row">
         <div class="container">
             <div class="features__description">
-                <span class="text-purple text-heading">FEATURES</span>
+                <span class="text-purple heading">FEATURES</span>
                 <h2 class="features__title">We have Amazing&nbsp;<span class="text-purple"> Service.</span></H2>
                 <p class="features__subtitle text-light-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
@@ -128,7 +128,7 @@
         <div class="container">
             <div class="quality">
                 <div class="quality__text text__align--left">
-                    <div class="text-heading text-purple quality__heading">QUALITY WORK</div>
+                    <div class="heading text-purple quality__heading">QUALITY WORK</div>
                     <h2 class="quality__text-title">Designed & Developed by <span class="text-purple">Professionals.</span></h2>
                     <p class="quality__text--para text-light-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <button class="quality__btn">Learn More</button>
@@ -149,7 +149,7 @@
                     <img src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
                 </figure>    
                 <div class="steps__text">
-                    <div class="text-heading text-purple">STEPS</div>
+                    <div class="heading text-purple">STEPS</div>
                     <h2 class="steps__text--title">Easy to <span class="text-purple">Get Started.</span></h2>
                     
                     <ul class="steps__para--wrapper">
@@ -196,7 +196,7 @@
             <div class="values">
 
                 <div class="values__text">
-                    <div class="text-heading text-purple">VALUES</div>
+                    <div class="heading text-purple">VALUES</div>
                     <h2 class="values__title">We Always Abide by Our <span class="text-purple">Principles.</span></h2>
                     <p class="values__subtitle text-light-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <div class="values__cards">
@@ -231,7 +231,75 @@
     </div>  
 </section>
 
-
+<section id="pricing">
+    <div class="row">
+        <div class="container">
+            <div class="pricing">
+                <div class="pricing__text">
+                    <div class="heading pricing__heading text-purple">PRICING</div>
+                    <h2 class="pricing__title">Reasonable & Flexible <span class="text-purple">Plans.</span></h2>
+                    <p class="pricing__para text-light-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="pricing__cards">
+                    <div class="pricing__card">
+                        <div class="pricing__card--highlight"></div>
+                        <div class="card__title-text">
+                            <div class="pricing__card--title">PERSONAL</div>
+                            <div class="pricing__card--price">$17.99</div>
+                            <div class="pricing__card--duration">MONTHLY</div>
+                        </div>
+                        <ul class="pricing__card-list">
+                            <li class="card-list__title">For Individuals</li>
+                            <li class="card-list__text">30 Templates</li>
+                            <li class="card-list__text">7 Landing Pages</li>
+                            <li class="card-list__text">12 Internal Pages</li>
+                            <li class="card-list__text">Basic Assistance</li>
+                        </ul>
+                        <div class="btn__wrapper">
+                            <button class="pricing__btn">BUY NOW</button>
+                        </div>
+                    </div>
+                    <div class="pricing__card">
+                        <div class="pricing__card--highlight"></div>
+                        <div class="card__title-text">
+                            <div class="pricing__card--title">BUSINESS</div>
+                            <div class="pricing__card--price">$37.99</div>
+                            <div class="pricing__card--duration">MONTHLY</div>
+                        </div>
+                        <ul class="pricing__card-list">
+                            <li class="card-list__title">For Small Businesses</li>
+                            <li class="card-list__text">60 Templates</li>
+                            <li class="card-list__text">15 Landing Pages</li>
+                            <li class="card-list__text">22 Internal Pages</li>
+                            <li class="card-list__text">Priority Assistance</li>
+                        </ul>
+                        <div class="btn__wrapper">
+                            <button class="pricing__btn">BUY NOW</button>
+                        </div>
+                    </div>
+                    <div class="pricing__card">
+                        <div class="pricing__card--highlight"></div>
+                        <div class="card__title-text">
+                            <div class="pricing__card--title">ENTERPRISE</div>
+                            <div class="pricing__card--price">$57.99</div>
+                            <div class="pricing__card--duration">MONTHLY</div>
+                        </div>
+                        <ul class="pricing__card-list">
+                            <li class="card-list__title">For Large Companies</li>
+                            <li class="card-list__text">90 Templates</li>
+                            <li class="card-list__text">27 Landing Pages</li>
+                            <li class="card-list__text">62 Internal Pages</li>
+                            <li class="card-list__text">Personal Assistance</li>
+                        </ul>
+                        <div class="btn__wrapper">
+                            <button class="pricing__btn">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
