Testimonials almost done

--- a/index.html
+++ b/index.html
@@ -301,7 +301,87 @@
     </div>
 </section>
 
+<section id="testimonials">
+    <div class="row">
+        <div class="container">
+            <div class="testimonials">
+                <figure class="testi__img--wrapper">
+                    <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="">
+                </figure>
+                <div class="testi__text">
+                    <div class="heading text-purple">TESTIMONIALS</div>
+                    <h2>Our Cliens <span class="text-purple">Love Us.</span></h2>
+                    <p class="text-light-gray testi__para" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam.</p>
+                    <div class="testi__review">
 
+                        <div class="testi__rating--wrapper">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="testi__review--title">Amazing User Experience</div>
+                        <p class="testi__review--para">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                        <div class="testi__review--profile-card">
+                            <div class="profile__info">
+                            <figure class="profile__img--wrapper">
+                                <img src="./assets/photo-1494790108377-be9c29b29330.avif" alt="" class="profile__img">
+                            </figure>
+                            <div class="profile__info-text">
+                                <div class="review__name">Charlotte Hale</div>
+                                <div class="review__position text-light-gray">Director, Delos inc.</div>
+                            </div>
+                            </div>
+                            <div class="review__arrows"></div>
+                            <figure class="review__arrow--left">
+                                <i class="fas fa-arrow-left"></i>
+                            </figure>
+                            <div class="divider"></div>
+                            <figure class="review__arrow--right">
+                                <i class="fa fa-arrow-right"></i>
+                            </figure>
+                        </div>
+
+                        
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 
 
 
