--- a/index.html
+++ b/index.html
@@ -353,9 +353,90 @@
 
 </section>
 
+<section id="faqs">
+    <div class="row">
+        <div class="container">
+            <div class="faqs">
+                <div class="faqs__text">
+                    <div class="heading text-purple">FAQS</div>
+                    <h2>You have <span class="text-purple"> Questions ?</span></h2>
+                    <p class="faqs__text--para text-light-gray">And we have got answers to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="faqs__questions">
+
+                    <div class="faqs__question">
+                        <div class="faqs__question--text">Are all templates easily customizable?</div>
+                        <figure class="arrow__down">
+                            <i class="fas fa-chevron-down"></i>
+                        </figure>
+                    </div>
+                    <div class="faqs__question">
+                        <div class="faqs__question--text">How long do you usually support an standalone template for ?</div>
+                        <figure class="arrow__down">
+                            <i class="fas fa-chevron-down"></i>
+                        </figure>
+                    </div>
+                    <div class="faqs__question">
+                        <div class="faqs__question--text"> What kind of payment methods do you accept ? </div>
+                        <figure class="arrow__down">
+                            <i class="fas fa-chevron-down"></i>
+                        </figure>
+                    </div>
+                    <div class="faqs__question">
+                        <div class="faqs__question--text"> Is there a subscribption service to get the latest templates ? </div>
+                        <figure class="arrow__down">
+                            <i class="fas fa-chevron-down"></i>
+                        </figure>
+                    </div>
+                    <div class="faqs__question">
+                        <div class="faqs__question--text"> Are the templates compatible with the React ? </div>
+                        <figure class="arrow__down">
+                            <i class="fas fa-chevron-down"></i>
+                        </figure>
+                    </div>
+                    <div class="faqs__question">
+                        <div class="faqs__question--text"> Do you really support Internet Explorer 11 ? </div>
+                        <figure class="arrow__down">
+                            <i class="fas fa-chevron-down"></i>
+                        </figure>
+                    </div>
+                </div>    
+                </div>
+            </div>
+        </div>
+</div>
 
 
 
+</section>
+
+<section id="started">
+        <div class="container">
+            <div class="started">
+                <div class="started__content">
+                    <figure class="blob__container">
+                        <i class="fas fa-circle"></i>
+                    </figure>
+                    <figure class="blob__container">
+                        <i class="fas fa-circle"></i>
+                    </figure>
+
+                    <div class="started__text">Developers all over the world are happily using Treact.</div>
+                    <div class="started__btn--links">
+
+                    <a class="started__btn--link" href="">
+                        <button class="started__btn">Get Started</button>
+                    </a>
+
+                    <a class="started__btn--link" href="">
+                        <button class="started__btn">Contact Us</button>
+                    </a>
+                    
+                    
+                </div>
+                </div>
+            </div>
+        </div>
+</section>
 
 
 
